--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
         </ul>
       </div>
     </nav>
-  
-    <hr>
 
-
-  <div class="jumbotron jumbotron-fluid" class="bg-primary";>
+  <div class="jumbotron jumbotron-fluid";>
     <div class="container">
       <h1 class="display-4">Steven Jones</h1>
       <p class="lead">A bit about me</p>
     </div>
   </div>
+
+  <hr>
 
   <div>
 
@@ -52,9 +51,9 @@
   <div class="container">
     <h1 class="mt-5">I was born in Boulder, CO</h1>
     <p class="lead">and currently live ten minutes east of Boulder in Broomfield. I've lived in Colorado for 28 of my 33 years. 
-      I spend most of my time with my wife Moriah and sons;Ge'Ovonni and Steven, playing or watching ice hockey. We support the 
+      I spend most of my time with my wife Moriah and sons; Ge'Ovonni and Steven, playing or watching ice hockey. We support the 
       Boston Bruins priamrily because they gave us box seats while we were in Boston for our then five year old son Steven's 
-      surgery. Steven got pneumonia and couldn't have surgery and through Boston Children's Hospital the Bruins organization 
+      surgery. Steven got pneumonia and couldn't have the surgery. Then, through Boston Children's Hospital the Bruins organization 
       donated the tickets to us. We watched them lose to the Florida Panthers and were hooked. We came home and after some
       rest and recouperation, my sona started playing hockey and we never looked back. We also follow the Los Angeles Clippers
       in the NBA, the Oakland (soon to be Las Vegas) Raiders in the NFL and Liverpool in the Premier League. We are currently 
