precautionary final commit of evening.

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,8 @@
           </div>
 
           <hr>
-          <main>
+
+          <main role="main" class="flex-shrink-0">
           <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"></span>
