--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                 <p class="lead">portfolio</p>
               </div>
             </div>
-            
+
           <hr>
 
           <main role="main" class="flex-shrink-0">
@@ -43,7 +43,7 @@
                 <p class="lead">of my life and the lives of my family. We have been to many games over the last four years which is the 
                   amount of time that my family has been watching hockey. We have been to games at TD Garden in Boston Massachussettes
                   and Pepsi Center and Magness Arena in Denver Colorado as well as Budweiser Events Center in Loveland Colorado. My 
-                  son has played in every old school rink and state of the art ice center from SteamBoat Springs Colorado to Anaheim,
+                  son has played in every old school rink and state of the art ice center from Steamboat Springs Colorado to Anaheim,
                   California. Steven made the travel team and we all volunteer our time and resources to the Hyland Hills
                   organization and we are at the rink for practice, games, or events a minimum of five nights a week not including out
                   of state tournaments.
