--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <nav class="navbar navbar-expand navbar-dark bg-dark">
       </button>
       <div class="float-sm-right"; class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            
+        <ul class="navbar-nav"> 
           <li class="nav-item">
             <a class="badge badge-pill badge-light"; class="nav-link" href="/index.html">about</a>
           </li>
@@ -52,7 +51,7 @@
     <h1 class="mt-5">I was born in Boulder, CO</h1>
     <p class="lead">and currently live ten minutes east of Boulder in Broomfield. I've lived in Colorado for 28 of my 33 years. 
       I spend most of my time with my wife Moriah and sons; Ge'Ovonni and Steven, playing or watching ice hockey. We support the 
-      Boston Bruins priamrily because they gave us box seats while we were in Boston for our then five year old son Steven's 
+      Boston Bruins primarily because they gave us box seats while we were in Boston for our then five year old son Steven's 
       surgery. Steven got pneumonia and couldn't have the surgery. Then, through Boston Children's Hospital the Bruins organization 
       donated the tickets to us. We watched them lose to the Florida Panthers and were hooked. We came home and after some
       rest and recouperation, my sona started playing hockey and we never looked back. We also follow the Los Angeles Clippers
