I darkened my three footers, pushed my navbar buttons right and connected my buttons on my nav bars

--- a/index.html
+++ b/index.html
@@ -11,25 +11,22 @@
 
 </head>
 <body>
-  
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <nav class="navbar navbar-expand navbar-dark bg-dark flex-row-reverse">
       </button>
       <div class="float-sm-right"; class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav"> 
           <li class="nav-item">
-            <a class="badge badge-pill badge-light"; class="nav-link" href="/index.html">about</a>
+            <a class="badge badge-pill badge-light"; class="nav-link" href="./index.html">about</a>
           </li>
           <li class="nav-item">
-            <a class="badge badge-pill badge-light"; class="nav-link" href="/contact.html">contact</a>
+            <a class="badge badge-pill badge-light"; class="nav-link" href="./contact.html">contact</a>
           </li>
           <li class="nav-item">
-            <a class="badge badge-pill badge-light"; class="nav-link" href="/portfolio.html">portfolio</a>
-         
+            <a class="badge badge-pill badge-light"; class="nav-link" href="./portfolio.html">portfolio</a>
         </ul>
       </div>
     </nav>
-
-  <div class="jumbotron jumbotron-fluid";>
+<div class="jumbotron jumbotron-fluid";>
     <div class="container">
       <h1 class="display-4">Steven Jones</h1>
       <p class="lead">A bit about me</p>
@@ -48,7 +45,7 @@
 
 <main role="main" class="flex-shrink-0">
   <div class="container">
-    <h1 class="mt-5">I was born in Boulder, CO</h1>
+    <h1 class="mt-5">I was born in Boulder Colorado...</h1>
     <p class="lead">and currently live ten minutes east of Boulder in Broomfield. I've lived in Colorado for 28 of my 33 years. 
       I spend most of my time with my wife Moriah and sons; Ge'Ovonni and Steven, playing or watching ice hockey. We support the 
       Boston Bruins primarily because they gave us box seats while we were in Boston for our then five year old son Steven's 
@@ -69,8 +66,8 @@
     </div>
 </main>
 
-<footer class="footer mt-auto py-3">
-  <div class="container">
+<footer class="footer mt-auto py-3 bg-dark">
+  <div class="container d-flex justify-content-center">
     <span class="text-muted">Created by SSJONES</span>
   </div>
 </footer>
