--- a/contact.html
+++ b/contact.html
@@ -9,24 +9,21 @@
     <title>contact</title>
 </head>
 <body>
-  
-        <nav class="navbar navbar-expand navbar-dark bg-dark">
-            </button>
-            <div class="float-sm-right"; class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                  
-                <li class="nav-item">
-                  <a class="badge badge-pill badge-light"; class="nav-link" href="/index.html">about</a>
-                </li>
-                <li class="nav-item">
-                  <a class="badge badge-pill badge-light"; class="nav-link" href="/contact.html">contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="badge badge-pill badge-light"; class="nav-link" href="/portfolio.html">portfolio</a>
-               
-              </ul>
-            </div>
-          </nav>
+    <nav class="navbar navbar-expand navbar-dark bg-dark flex-row-reverse">
+    </button>
+    <div class="float-sm-right"; class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav"> 
+        <li class="nav-item">
+          <a class="badge badge-pill badge-light"; class="nav-link" href="./index.html">about</a>
+        </li>
+        <li class="nav-item">
+          <a class="badge badge-pill badge-light"; class="nav-link" href="./contact.html">contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="badge badge-pill badge-light"; class="nav-link" href="./portfolio.html">portfolio</a>
+      </ul>
+    </div>
+  </nav>
           <div class="jumbotron jumbotron-fluid">
               <div class="container">
                 <h1 class="display-4">Steven Jones</h1>
@@ -60,8 +57,8 @@
           </main>
 </body>
 
-<footer class="footer mt-auto py-3">
-    <div class="container">
+<footer class="footer mt-auto py-3 bg-dark">
+    <div class="container d-flex justify-content-center">
       <span class="text-muted">Created by SSJONES</span>
     </div>
   </footer>
