I centered my submit button and added placeholders for the contact page

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
         <li class="nav-item">
           <a class="badge badge-pill badge-light"; class="nav-link" href="./portfolio.html">portfolio</a>
       </ul>
+      
     </div>
   </nav>
           <div class="jumbotron jumbotron-fluid">
@@ -38,11 +39,11 @@
               <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"></span>
               </div>
-              <input type="text" class="form-control" placeholder="name" aria-label="name" aria-describedby="basic-addon1">
+              <input type="text" class="form-control" placeholder="Please type your name..." aria-label="name" aria-describedby="basic-addon1">
           </div>
 
           <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="email" aria-label="email" aria-describedby="basic-addon2">
+              <input type="text" class="form-control" placeholder="Please type your name..." aria-label="email" aria-describedby="basic-addon2">
               <div class="input-group-append">
                 <span class="input-group-text" id="basic-addon2"></span>
               </div>
@@ -50,10 +51,13 @@
               
           <div class="input-group">
                 <div class="input-group-prepend">
-                  <span class="input-group-text">Additional Comments...</span>
+                  <span class="input-group-text"></span>
                 </div>
-                <textarea class="form-control" aria-label="With textarea"></textarea>
+                <textarea placeholder="Please type your comment..."; class="form-control" aria-label="With textarea"></textarea>
           </div>
+        <div class="d-flex justify-content-around";>
+          <button type="button"; onclick="alert('Submitted!')">submit</button><!--this is the submit button-->
+        </div>
           </main>
 </body>
 
