This is my final productafter some final touches.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css"><!--link to style.css
+    which is in DIFFERENT folder so requires file path-->
   
-  
-  <title>Document</title>
+  <title>portfolio</title>
 
 </head>
 <body>
@@ -34,12 +35,6 @@
   </div>
 
   <hr>
-
-  <div>
-
-      <img src="..." class="img-fluid"; width: 100% \9; class="rounded mx-auto d-block" alt="...">
-      
-  </div>
   
 </body>
 
@@ -67,9 +62,10 @@
 </main>
 
 <footer class="footer mt-auto py-3 bg-dark">
-  <div class="container d-flex justify-content-center">
+    <div class="container d-flex justify-content-center">
     <span class="text-muted">Created by SSJONES</span>
   </div>
 </footer>
+
 </html>
 
