--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"><!--link to style.css
+      which is in DIFFERENT folder so requires file path-->
     <title>contact</title>
 </head>
 <body>
@@ -43,7 +44,7 @@
           </div>
 
           <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Please type your name..." aria-label="email" aria-describedby="basic-addon2">
+              <input type="text" class="form-control" placeholder="Please type your email..." aria-label="email" aria-describedby="basic-addon2">
               <div class="input-group-append">
                 <span class="input-group-text" id="basic-addon2"></span>
               </div>
